--- a/index.html
+++ b/index.html
@@ -338,6 +338,185 @@
             </div>
           </div>
         </div>
+
+        <div class="d-flex flex-column popular-course gap-5">
+          <div
+            class="d-flex flex-row justify-content-between popular-course-title"
+          >
+            <h2>JeLS - New講座</h2>
+          </div>
+          <div class="d-flex flex-column gap-4">
+            <div class="course-grid-container">
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+              <div class="item">
+                <img
+                  class="thumbnail"
+                  src="https://fastly.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0"
+                  alt=""
+                />
+                <p class="title">講義プログラム名</p>
+                <button class="category">
+                  まちづくり・スマートシティ・防災
+                </button>
+                <div class="info-container">
+                  <div class="info-item">
+                    <i class="fas fa-clock icon"></i>
+                    <span style="font-size: 12px">3 時間</span>
+                  </div>
+                  <div class="info-item">
+                    <i class="fas fa-tv icon"></i>
+                    <span style="font-size: 12px">8 レ講義</span>
+                  </div>
+                </div>
+                <hr style="width: 100%; color: gray; height: 1px; margin: 0" />
+                <p class="content">
+                  子どもたちが保育所で安心・安全に、そして健やかに育つために身につけておくべき、保健衛生や安全対策の知識、技術を学ぶ講座です。2018年版「保育所における感染症対策ガイドライン」にも対応しています...
+                </p>
+                <a href="#" class="more">もっと見る</a>
+              </div>
+            </div>
+            <div
+              class="d-flex flex-row gap-3 justify-content-center align-items-center"
+            >
+              <a href="#" style="color: #1a2d44; font-size: 14px">View more</a>
+              <button
+                class="button left"
+                style="color: #1a2d44; border: 1px solid #1a2d44"
+              >
+                &#8594;
+              </button>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <!-- Footer -->
