--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     />
 
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="js/script.js" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -651,12 +650,167 @@
             </div>
           </div>
         </div>
+
+        <div class="d-flex flex-wrap questions-container">
+          <div class="d-flex flex-column gap-4 col-4">
+            <h1>よくある質問</h1>
+            <div class="d-flex gap-3 align-items-center">
+              <a href="#" style="color: #1a2d44; font-size: 14px">View more</a>
+              <button
+                class="button left"
+                style="color: #1a2d44; border: 1px solid #1a2d44"
+              >
+                &#8594;
+              </button>
+            </div>
+          </div>
+          <div class="col-8">
+            <div class="faq-item"></div>
+            <div class="faq-item">
+              <div class="question" onclick="toggleAnswer(this)">
+                <div class="avatar-circle" style="margin-right: 15px">Q</div>
+                <div class="d-flex flex-row flex-fill justify-content-between">
+                  <p style="margin: 0">
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                  </p>
+                  <div class="icon-circle">
+                    <span class="icon"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="answer">
+                <div class="d-flex flex-row flex-fill">
+                  <div
+                    class="avatar-circle"
+                    style="margin-right: 15px; background-color: orange"
+                  >
+                    A
+                  </div>
+                  <p style="margin: 0; flex-grow: 1">
+                    はい、可能です。<br />
+                    本講座内では操作練習ができるようになっていますがOffice2016のソフトが入ってなくてもできる上、スマホでも受講できるようになっています。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="faq-item">
+              <div class="question" onclick="toggleAnswer(this)">
+                <div class="avatar-circle" style="margin-right: 15px">Q</div>
+                <div class="d-flex flex-row flex-fill justify-content-between">
+                  <p style="margin: 0">
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                  </p>
+                  <div class="icon-circle">
+                    <span class="icon"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="answer">
+                <div class="d-flex flex-row flex-fill">
+                  <div
+                    class="avatar-circle"
+                    style="margin-right: 15px; background-color: orange"
+                  >
+                    A
+                  </div>
+                  <p style="margin: 0; flex-grow: 1">
+                    はい、可能です。<br />
+                    本講座内では操作練習ができるようになっていますがOffice2016のソフトが入ってなくてもできる上、スマホでも受講できるようになっています。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="faq-item">
+              <div class="question" onclick="toggleAnswer(this)">
+                <div class="avatar-circle" style="margin-right: 15px">Q</div>
+                <div class="d-flex flex-row flex-fill justify-content-between">
+                  <p style="margin: 0">
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                  </p>
+                  <div class="icon-circle">
+                    <span class="icon"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="answer">
+                <div class="d-flex flex-row flex-fill">
+                  <div
+                    class="avatar-circle"
+                    style="margin-right: 15px; background-color: orange"
+                  >
+                    A
+                  </div>
+                  <p style="margin: 0; flex-grow: 1">
+                    はい、可能です。<br />
+                    本講座内では操作練習ができるようになっていますがOffice2016のソフトが入ってなくてもできる上、スマホでも受講できるようになっています。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="faq-item">
+              <div class="question" onclick="toggleAnswer(this)">
+                <div class="avatar-circle" style="margin-right: 15px">Q</div>
+                <div class="d-flex flex-row flex-fill justify-content-between">
+                  <p style="margin: 0">
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                  </p>
+                  <div class="icon-circle">
+                    <span class="icon"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="answer">
+                <div class="d-flex flex-row flex-fill">
+                  <div
+                    class="avatar-circle"
+                    style="margin-right: 15px; background-color: orange"
+                  >
+                    A
+                  </div>
+                  <p style="margin: 0; flex-grow: 1">
+                    はい、可能です。<br />
+                    本講座内では操作練習ができるようになっていますがOffice2016のソフトが入ってなくてもできる上、スマホでも受講できるようになっています。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="faq-item">
+              <div class="question" onclick="toggleAnswer(this)">
+                <div class="avatar-circle" style="margin-right: 15px">Q</div>
+                <div class="d-flex flex-row flex-fill justify-content-between">
+                  <p style="margin: 0">
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                  </p>
+                  <div class="icon-circle">
+                    <span class="icon"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="answer">
+                <div class="d-flex flex-row flex-fill">
+                  <div
+                    class="avatar-circle"
+                    style="margin-right: 15px; background-color: orange"
+                  >
+                    A
+                  </div>
+                  <p style="margin: 0; flex-grow: 1">
+                    はい、可能です。<br />
+                    本講座内では操作練習ができるようになっていますがOffice2016のソフトが入ってなくてもできる上、スマホでも受講できるようになっています。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <!-- Footer -->
         <div class="bg-primary" style="height: 350px">AA</div>
       </footer>
     </div>
+
+    <script src="js/script.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
