--- a/index.html
+++ b/index.html
@@ -651,8 +651,10 @@
           </div>
         </div>
 
-        <div class="d-flex flex-wrap questions-container">
-          <div class="d-flex flex-column gap-4 col-4">
+        <div
+          class="d-flex flex-column flex-md-row gap-4 gap-md-0 questions-container"
+        >
+          <div class="d-flex flex-column gap-3 gap-md-4 col-md-4">
             <h1>よくある質問</h1>
             <div class="d-flex gap-3 align-items-center">
               <a href="#" style="color: #1a2d44; font-size: 14px">View more</a>
@@ -664,16 +666,18 @@
               </button>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-md-8">
             <div class="faq-item"></div>
             <div class="faq-item">
               <div class="question" onclick="toggleAnswer(this)">
                 <div class="avatar-circle" style="margin-right: 15px">Q</div>
-                <div class="d-flex flex-row flex-fill justify-content-between">
+                <div
+                  class="d-flex flex-row flex-fill justify-content-between align-items-md-center"
+                >
                   <p style="margin: 0">
                     家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
                   </p>
-                  <div class="icon-circle">
+                  <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
                   </div>
                 </div>
@@ -700,7 +704,7 @@
                   <p style="margin: 0">
                     家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
                   </p>
-                  <div class="icon-circle">
+                  <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
                   </div>
                 </div>
@@ -727,7 +731,7 @@
                   <p style="margin: 0">
                     家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
                   </p>
-                  <div class="icon-circle">
+                  <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
                   </div>
                 </div>
@@ -754,7 +758,7 @@
                   <p style="margin: 0">
                     家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
                   </p>
-                  <div class="icon-circle">
+                  <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
                   </div>
                 </div>
@@ -781,7 +785,7 @@
                   <p style="margin: 0">
                     家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
                   </p>
-                  <div class="icon-circle">
+                  <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
                   </div>
                 </div>
