--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
         </div>
 
         <div
-          class="d-flex flex-column flex-md-row gap-4 gap-md-0 questions-container"
+          class="d-flex flex-column flex-md-row gap-4 gap-md-0 faq-container"
         >
           <div class="d-flex flex-column gap-3 gap-md-4 col-md-4">
             <h1>よくある質問</h1>
@@ -702,7 +702,7 @@
                 <div class="avatar-circle" style="margin-right: 15px">Q</div>
                 <div class="d-flex flex-row flex-fill justify-content-between">
                   <p style="margin: 0">
-                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか？
+                    家のPCに入っているOfficeソフトのバージョンが2013なのですが学習可能でしょうか?
                   </p>
                   <div class="icon-circle" style="margin-left: 15px">
                     <span class="icon"></span>
@@ -810,7 +810,30 @@
       </main>
       <footer>
         <!-- Footer -->
-        <div class="bg-primary" style="height: 350px">AA</div>
+        <div class="footer-container">
+          <div class="d-flex flex-column">
+            <div class="d-flex flex-row footer-content">
+              <img
+                src="assets/logo.png"
+                alt="logo"
+                width="95px"
+                height="95px"
+              />
+              <div class="d-flex align-items-center">
+                <div class="footer-content-grid">
+                  <div class="footer-content-grid-item">団体概要</div>
+                  <div class="footer-content-grid-item">個人情報保護方針</div>
+                  <div class="footer-content-grid-item">特定商取引法表示</div>
+                  <div class="footer-content-grid-item">利用規約</div>
+                  <div class="footer-content-grid-item">解約ポリシー</div>
+                  <div class="footer-content-grid-item">推奨環境</div>
+                </div>
+              </div>
+            </div>
+            <hr style="color: gray; margin: 0; height: 1px" />
+            <p style="font-size: 12px; margin-top: 1rem; color: gray;">Copyright © 2022 Jiho Inc. All rights reserved</p>
+          </div>
+        </div>
       </footer>
     </div>
 
